2006-08-31  Michael Mauger  <mmaug@yahoo.com>

	* custom.el (custom-theme-set-variables): Autoload packages before
	sorting the variables.

2006-08-30  Michael Kifer  <kifer@cs.stonybrook.edu>

	* viper-cmd.el (viper-special-read-and-insert-char): Convert events to
	chars if XEmacs.
	(viper-after-change-undo-hook): Check if undo-in-progress is bound.

2006-08-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (python-eldoc-function): Re-enable quit while
	waiting for process.

2006-08-30  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/mac-win.el (mac-string-to-utxt): If adjustment for MacJapanese
	results in ASCII-only string, encode original one directly.

2006-08-29  Romain Francoise  <romain@orebokech.com>

	* startup.el (normal-splash-screen, fancy-splash-screens):
	Make buffer read-only and arrange to enter view mode if necessary.

2006-08-29  Chong Yidong  <cyd@stupidchicken.com>

	* hl-line.el (hl-line): New face.
	(hl-line-face): Use it.

	* image-mode.el (image-mode): Fix last fix.
	Suggested by Kim F. Storm.

2006-08-29  Michael Albinus  <michael.albinus@gmx.de>

	Sync with Tramp 2.0.54.

	* net/tramp.el (tramp-convert-file-attributes): Call `eql' instead
	of `=', because `tramp-get-remote-gid' might not always return an
	integer when expected.
	(tramp-register-file-name-handlers): `partial-completion-mode' is
	unknown to XEmacs.
	(tramp-time-diff): Don't use `floor', it might fail for large
	differences.
	(tramp-handle-make-auto-save-file-name): For Emacs 21, set
	`tramp-auto-save-directory' if unset in order to guarantee unique
	auto-save file names.

2006-08-28  Chong Yidong  <cyd@stupidchicken.com>

	* image-mode.el (image-mode): Display image as text on a terminal.

2006-08-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (python-send-command): Simplify.
	(run-python): Don't generate a new buffer unless `new' was specified.
	Make sure we send `import emacs' to the proper process.
