@@ -1,3 +1,7 @@
+2006-08-31  Romain Francoise  <romain@orebokech.com>
+
+	* dired-x.el (dired-guess-shell-alist-default): Update.
+
 2006-08-31  Michael Mauger  <mmaug@yahoo.com>
 
 	* custom.el (custom-theme-set-variables): Autoload packages before
